--- a/package.json
+++ b/package.json
@@ -10,17 +10,34 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
-        "bootstrap": "^4.1.0",
-        "cross-env": "^5.1",
+        "axios": "^0.19",
+        "bootstrap": "^4.0.0",
+        "cross-env": "^7.0",
         "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "jquery-ui": "^1.12.1",
+        "laravel-mix": "^5.0.1",
+        "lodash": "^4.17.13",
+        "moment": "^2.29.1",
         "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.27.0",
-        "sass-loader": "^7.1.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.20.1",
+        "sass-loader": "^8.0.0",
+        "tempusdominus-bootstrap-4": "^5.1.2",
         "vue": "^2.5.17",
-        "vue-template-compiler": "^2.6.8"
+        "vue-template-compiler": "^2.6.11"
+    },
+    "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.13.1",
+        "admin-lte": "^3.0.5",
+        "bootstrap-timepicker": "^0.5.2",
+        "bootstrap4-datetimepicker": "^5.2.3",
+        "datatables.net-bs": "^1.10.22",
+        "datatables.net-dt": "^1.10.21",
+        "eonasdan-bootstrap-datetimepicker": "^4.17.47",
+        "flatpickr": "^4.6.6",
+        "jquery-timepicker": "^1.3.3",
+        "sweetalert2": "^9.14.2",
+        "timepicker": "^1.13.10",
+        "webpack": "^4.42.1"
     }
 }
